Added readme to home tiddler

--- a/index.html
+++ b/index.html
@@ -6587,7 +6587,7 @@ exports.run = function(text, tiddler) {
 <div created="20151024164759136" creator="i" modified="20151024164801192" modifier="ihm4" title="$:/status/UserName">
 <pre>ihm4u</pre>
 </div>
-<div list="[[vecmap - Easy tiddler maps for TW5]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6743,7 +6743,7 @@ exports.run = function(text, tiddler) {
 <div created="20151024065556289" modified="20151024065601218" tags="One" title="Two">
 <pre></pre>
 </div>
-<div created="20151024065631952" modified="20151024164637824" tags="home" title="vecmap - Easy tiddler maps for TW5">
+<div created="20151024065631952" creator="ihm4u" modified="20151024165501169" modifier="ihm4u" tags="home" title="vecmap - Easy tiddler maps for TW5">
 <pre>!!Introduction
 The [[vecmap|$:/plugins/ihm/vecmap]] plugin shows tiddlers in with an SVG diagram like the following:
 &lt;$vecmap start=&quot;One&quot; /&gt;
@@ -6754,7 +6754,10 @@ It uses the tags to figure out the tree structure. It can optionally use links a
 |Current version|{{$:/plugins/ihm/vecmap!!version}}|
 
 To install simply drag this link to your wiki:
-[[$:/plugins/ihm/vecmap]]</pre>
+[[$:/plugins/ihm/vecmap]]
+
+{{$:/plugins/ihm/vecmap/readme}}
+</pre>
 </div>
 <div created="20151024153452455" modified="20151024155753457" tags="" title="Vecmap development">
 <pre>$:/plugins/ihm/vecmap
